plugins {
    id 'org.springframework.boot' version '3.3.0'
    id 'java'
}
apply plugin: 'jacoco'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group 'squote'
version = '2.0.3'

bootJar {
    archiveFileName = 'web-parser-rest.jar'
}

jacoco {
    toolVersion = '0.8.12'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.3'
    implementation group: 'org.asynchttpclient', name: 'async-http-client', version: '3.0.1'
    implementation 'com.github.ben-manes.caffeine:caffeine:2.7.0'
    implementation group: 'io.projectreactor.addons', name: 'reactor-extra', version: '3.5.1'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation group: 'org.htmlunit', name: 'htmlunit', version: '4.9.0'

    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
//    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
    implementation group: 'commons-io', name: 'commons-io', version: '2.14.0'
    implementation group: 'com.google.guava', name: 'guava', version: '32.0.1-android'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'junit:junit:4.13.1'
}

test {
    testLogging.showStandardStreams = true
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = false
        html.required = true
    }
}
